@@ -1,6 +1,8 @@
 Change log for the VSCP Daemon
 ==============================
 
+210922 AKHE  The debug flags of the config file can now be set as a string containing 
+             a hexa decimal representation.
 210922 AKHE  Added -v switch for version display.
 210922 AKHE  Eased permissions a bit for install folders.
 210922 AKHE  All clientid's are empty on install.
